# llm_rs

./: .gitignore  Cargo.toml
src/: chatbot.rs  error.rs  main.rs  prelude.rs
src/data/: prompts.txt  words.json
src/prompts/: mod.rs
src/prompts/templates/: standard.jinja
src/providers/: ollama.rs
src/utils/: debug.rs  mod.rs
