[package]
name = "llm_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ollama-rs = {version = "0.2.1", features = ["stream"]}
tokio-stream = "0.1.16"
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures-core = "0.3.31"
futures-util = "0.3.31"
